syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.orange";
option java_outer_classname = "KeyManager";

package br.com.orange;

service KeyManagerService {
  rpc register (KeyManagerRequest) returns (KeyManagerReply) {}
}

message KeyManagerRequest {
  string clientId = 1;
  Key keyType = 2;
  string keyValue = 3;
  Account accountType = 4;

  enum Key {
    CPF = 0;
    PHONE = 1;
    EMAIL = 2;
    RANDOM = 3;
  }

  enum Account {
      CONTA_CORRENTE = 0;
      CONTA_POUPANCA = 1;
  }
}

message KeyManagerReply {
  string message = 1;
}